--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -118,5 +118,5 @@
     <string name="hide_gesture_hint">Hide gestural navigation hint</string>
 
     <!-- Assisted GPS -->
-    <string name="location_agps_access_summary">When location is on, <b>download satellite assistance data from the internet</b>, which can greatly improve the GPS startup performance.</string>
+    <string name="location_agps_access_summary">Download satellite assistance from the Internet</string>
 </resources>
