--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,7 +25,8 @@
 
     <string name="activity_label_empty" />
 
-    <string name="installing_verbiage">Installing\nMay take up to 15+ minutes to finishing installing and setting up the default and selected applications. Please wait.</string>
+    <string name="setup_fdroid_title">Installer</string>
+    <string name="installing_verbiage">Installing software, could be up to 15+ minutes.</string>
 
     <string name="next">Next</string>
     <string name="skip">Skip</string>
@@ -46,8 +47,6 @@
     <string name="setup_datetime">Date &amp; time</string>
     <string name="setup_current_date">Current date</string>
     <string name="setup_current_time">Current time</string>
-
-    <string name="setup_fdroid_title">Privacy Society Installer</string>
 
     <string name="sim_missing_summary" product="tablet">A SIM card has not been detected in your tablet. To insert a SIM card, read the instructions that came with your device.</string>
     <string name="sim_missing_summary" product="default">A SIM card has not been detected in your phone. To insert a SIM card, read the instructions that came with your device.</string>
